--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <application
         android:name=".DogsRandomFactsApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/dog1"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/dog1"
         android:supportsRtl="true"
         android:theme="@style/Theme.DogsRandomFacts"
         android:usesCleartextTraffic="true">
@@ -24,6 +24,10 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
